fix: update content and vite plugin

--- a/src/react-an-overview/deck.mdx
+++ b/src/react-an-overview/deck.mdx
@@ -284,7 +284,7 @@ layout: side
 
 ---
 
-## **JavaScript Fundamentals for Hooks**
+## **JavaScript Fundamentals** for **Hooks**
 
 <Side>
 
@@ -690,8 +690,10 @@ Teaching React/TypeScript/NodeJS
 </IconBox>
 <IconBox icon="🎬">
 
-Preparing some courses (React Query, React Hook Form) for Udemy (~Nov/Dec
-2022).
+<strike>
+  Preparing some courses (React Query, React Hook Form) for Udemy (~Nov/Dec
+  2022).
+</strike>
 
 </IconBox>
 <IconBox icon="👨‍💻">
