docs: add README

--- a/src/rca-and-asynclocalstorage/deck.mdx
+++ b/src/rca-and-asynclocalstorage/deck.mdx
@@ -514,7 +514,7 @@ layout: centered
 
 ---
 
-### **Conclusion?**
+### **Conclusion**
 
 <Appear>
 
@@ -546,4 +546,4 @@ import feedbackQR from "./assets/feedback-qr.png";
   style={{ maxHeight: 300, marginBottom: "2rem", borderRadius: 20 }}
 />
 
-### **Feedback** ⬆️
+⬆️ **Feedback** ⬆️
