feat: update talks

--- a/src/rca-and-asynclocalstorage/deck.mdx
+++ b/src/rca-and-asynclocalstorage/deck.mdx
@@ -689,14 +689,12 @@ layout: centered
 
 ---
 
-import feedbackQR from "./assets/feedback-qr.png";
+### **Merci 🙏**
 
-### **Thanks 🙏**
+<Appear>
 
-<Image
-  src={feedbackQR}
-  alt="Feedback QR"
-  style={{ maxHeight: 300, marginBottom: "2rem", borderRadius: 20 }}
-/>
+:qrcode[https://tally.so/r/w4xxVY?Talk=FIBO]
 
 ⬆️ **Feedback** ⬆️
+
+</Appear>
